layout finished, ready for finishing styling

--- a/index.html
+++ b/index.html
@@ -32,24 +32,50 @@
                         <p id="name">Jane Doe (@janedoe23)</p>
                     </div>
                 </div>
-                <div id="buttons">a</div>
+                <div id="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
 
         <div class="sidebar">
-            <div class="logo">dashboard</div>
-            <div id="upper-nav">
-                <div class="upper-nav">Home</div>
-                <div class="upper-nav">Profile</div>
-                <div class="upper-nav">Messages</div>
-                <div class="upper-nav">History</div>
-                <div class="upper-nav">Tasks</div>
-                <div class="upper-nav">Communities</div>
-            </div>
-            <div id="lower-nav">
-                <div class="lower-nav">Settings</div>
-                <div class="lower-nav">Support</div>
-                <div class="lower-nav">Privacy</div>
+            <div id="fixed-container">
+                <div id="logo">
+                    <a href="">dashboard</a>
+                </div>
+                <div id="upper-nav">
+                    <div class="upper-nav">
+                        <a href="">Home</a>
+                    </div>
+                    <div class="upper-nav">
+                        <a href="">Profile</a>
+                    </div>
+                    <div class="upper-nav">
+                        <a href="">Messages</a>
+                    </div>
+                    <div class="upper-nav">
+                        <a href="">History</a>
+                    </div>
+                    <div class="upper-nav">
+                        <a href="">Tasks</a>
+                    </div>
+                    <div class="upper-nav">
+                        <a href="">Communities</a>
+                    </div>
+                </div>
+                <div id="lower-nav">
+                    <div class="lower-nav">
+                        <a href=""> Settings</a>
+                    </div>
+                    <div class="lower-nav">
+                        <a href="">Support</a>
+                    </div>
+                    <div class="lower-nav">
+                        <a href="">Privacy</a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -114,8 +140,56 @@
 
         <div class="news">
             <div id="news-sub">
-                <div id="announcements">a</div>
-                <div id="trending">a</div>
+                <div id="announcements">
+
+                    <p>Announcements</p>
+                    <div id="announcements-sub">
+                        <h4>Site Maintenance</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                            corrupti
+                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                            Corrupti nesciunt molestias inventore soluta ut?
+                        </p>
+                        <h4>Community Share Day</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                            corrupti
+                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                            Corrupti nesciunt molestias inventore soluta ut?
+                        </p>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                            corrupti
+                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                            Corrupti nesciunt molestias inventore soluta ut?
+                        </p>
+                    </div>
+
+                </div>
+                <div id="trending">
+                    <div>
+                        <h5>a</h5>
+                        <p>a</p>
+                        <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    </div>
+                    <div>
+                        <h5>a</h5>
+                        <p>a</p>
+                        <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    </div>
+                    <div>
+                        <h5>a</h5>
+                        <p>a</p>
+                        <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    </div>
+                    <div>
+                        <h5>a</h5>
+                        <p>a</p>
+                        <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
