added styling to all but news sidebar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="sidebar">
             <div id="fixed-container">
                 <div id="logo">
-                    <a href="">dashboard</a>
+                    <a href="">Dashboard</a>
                 </div>
                 <div id="upper-nav">
                     <div class="upper-nav">
@@ -80,114 +80,139 @@
         </div>
 
         <div class="content">
+            <h4>My Projects</h4>
             <div class="projects">
                 <div class="projects-sub">
                     <b>Super Cool Project</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi adipisci maxime incidunt.
+                        Explicabo provident quos adipisci dolorum eum, illo, deleniti alias autem ipsam itaque odio?
+                        Quas quia id aliquam obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Distinctio atque sit animi quaerat porro totam quod, ab, culpa error consectetur perferendis
+                        eius quia assumenda iure corrupti unde odio veritatis ex.
                     </p>
                 </div>
                 <div class="projects-sub">
                     <b>Less Cool Project</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio deleniti veritatis similique illo
+                        error, dolore rerum voluptas ipsum eligendi tenetur expedita quod non voluptatum at repellat
+                        aliquid? Cum, ratione aliquid! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta
+                        quae fugiat recusandae tenetur nisi tempora, quos blanditiis eos illum reprehenderit architecto,
+                        porro commodi eius beatae minima, quidem tempore optio suscipit.
                     </p>
                 </div>
                 <div class="projects-sub">
                     <b>Impossible App</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis inventore sit amet minima fuga
+                        possimus quas cupiditate dolor dolore commodi deserunt culpa consequuntur illum optio, nesciunt
+                        ex a aspernatur beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam
+                        repellendus voluptatum dolorum veniam laborum, natus, in consectetur necessitatibus a aliquid
+                        dicta non voluptatibus aspernatur distinctio temporibus, eligendi odio inventore!
                     </p>
                 </div>
                 <div class="projects-sub">
                     <b>Easy Peasy App</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur blanditiis,
+                        placeat voluptates at ducimus ab, dolorem quam dolores perspiciatis fugit. Voluptate cum
+                        perferendis ullam tempore cumque asperiores vero ipsa. Lorem ipsum dolor sit amet consectetur,
+                        adipisicing elit. Nam reiciendis voluptate aliquam ipsum doloribus temporibus iusto, quaerat,
+                        asperiores cupiditate eveniet adipisci unde hic rem porro iure velit, soluta tempora quo?
                     </p>
                 </div>
                 <div class="projects-sub">
                     <b>Ad Blocker</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id reprehenderit minus nihil tenetur
+                        suscipit aspernatur atque doloremque quaerat ab, maiores nobis ipsam architecto quam, harum
+                        illo, ea quae beatae numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Dignissimos beatae nobis sint, odit nihil consequuntur ut, laborum rem tempora voluptate nam
+                        provident impedit quia. Dolores perspiciatis consequuntur pariatur quia a.
                     </p>
                 </div>
                 <div class="projects-sub">
                     <b>Money Maker</b>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eveniet distinctio quia eius ea
-                        maxime maiores tempore enim. Eum ad odit repellat dolores dignissimos reprehenderit recusandae,
-                        qui optio veniam facilis.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente sint fugiat minus, sed eos
+                        sunt itaque ipsam alias ex deleniti maiores repudiandae modi reprehenderit, inventore blanditiis
+                        nostrum dolores. Quam, quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
+                        mollitia non voluptatum expedita iste provident obcaecati, quas quam eum illo eos maiores
+                        similique in neque harum! Adipisci, at distinctio. Et?
                     </p>
                 </div>
             </div>
         </div>
 
+        
         <div class="news">
+            <h3>Announcements</h3>
             <div id="news-sub">
                 <div id="announcements">
 
-                    <p>Announcements</p>
+
                     <div id="announcements-sub">
-                        <h4>Site Maintenance</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
-                            corrupti
-                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
-                            Corrupti nesciunt molestias inventore soluta ut?
-                        </p>
-                        <h4>Community Share Day</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
-                            corrupti
-                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
-                            Corrupti nesciunt molestias inventore soluta ut?
-                        </p>
-                        <h4>Updated Privacy Policy</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
-                            corrupti
-                            delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
-                            Corrupti nesciunt molestias inventore soluta ut?
-                        </p>
+                        <div>
+                            <h4>Site Maintenance</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                                corrupti
+                                delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                                Corrupti nesciunt molestias inventore soluta ut?
+                            </p>
+                        </div>
+                        <div>
+                            <h4>Community Share Day</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                                corrupti
+                                delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                                Corrupti nesciunt molestias inventore soluta ut?
+                            </p>
+                        </div>
+                        <div>
+                            <h4>Updated Privacy Policy</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nesciunt doloremque quo
+                                corrupti
+                                delectus architecto voluptas, consequuntur rem iure atque officia! Eius, molestias hic!
+                                Corrupti nesciunt molestias inventore soluta ut?
+                            </p>
+                        </div>
                     </div>
 
                 </div>
+
+                <h3>Trending</h3>
+
                 <div id="trending">
+
                     <div>
-                        <h5>a</h5>
-                        <p>a</p>
                         <img src="icons/person-man-svgrepo-com.svg" alt="">
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
                     </div>
                     <div>
-                        <h5>a</h5>
-                        <p>a</p>
                         <img src="icons/person-man-svgrepo-com.svg" alt="">
+                        <h5>@morgan</h5>
+                        <p>Super Cool Project</p>
                     </div>
                     <div>
-                        <h5>a</h5>
-                        <p>a</p>
                         <img src="icons/person-man-svgrepo-com.svg" alt="">
+                        <h5>@kendall</h5>
+                        <p>Life Changing App</p>
                     </div>
                     <div>
-                        <h5>a</h5>
-                        <p>a</p>
                         <img src="icons/person-man-svgrepo-com.svg" alt="">
+                        <h5>@alex</h5>
+                        <p>No Traffic Maker</p>
                     </div>
                 </div>
             </div>
