project finished for now

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
                     <input id="search-bar"></input>
                 </div>
                 <div id="notifications-profile">
-                    <img src="icons/icons8-bell-material-filled/icons8-bell-24.png" alt="">
-                    <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    <a href="">
+                        <img src="icons/icons8-bell-material-filled/icons8-bell-24.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="icons/person-man-svgrepo-com.svg" alt="">
+                    </a>
                     <p>Jane Doe</p>
                 </div>
             </div>
@@ -29,7 +33,7 @@
                     <img src="icons/person-man-svgrepo-com.svg" alt="" id="profile">
                     <div id="sub-greeting">
                         <p id="hi">Hi there,</p>
-                        <p id="name">Jane Doe (@janedoe23)</p>
+                        <p id="name">Jane Doe @janedoe23</p>
                     </div>
                 </div>
                 <div id="buttons">
@@ -43,36 +47,46 @@
         <div class="sidebar">
             <div id="fixed-container">
                 <div id="logo">
+                    <img src="icons/dashboard.png" alt="">
                     <a href="">Dashboard</a>
                 </div>
                 <div id="upper-nav">
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/icons8-home.svg" alt="">
                         <a href="">Home</a>
                     </div>
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/user.png" alt="">
                         <a href="">Profile</a>
                     </div>
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/speech-bubble.png" alt="">
                         <a href="">Messages</a>
                     </div>
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/clock.png" alt="">
                         <a href="">History</a>
                     </div>
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/notes.png" alt="">
                         <a href="">Tasks</a>
                     </div>
-                    <div class="upper-nav">
+                    <div class="upper-nav-sub">
+                        <img src="icons/multiple-users-silhouette.png" alt="">
                         <a href="">Communities</a>
                     </div>
                 </div>
                 <div id="lower-nav">
-                    <div class="lower-nav">
+                    <div class="lower-nav-sub">
+                        <img src="icons/cog-wheel-silhouette.png" alt="">
                         <a href=""> Settings</a>
                     </div>
-                    <div class="lower-nav">
+                    <div class="lower-nav-sub">
+                        <img src="icons/question-mark.png" alt="">
                         <a href="">Support</a>
                     </div>
-                    <div class="lower-nav">
+                    <div class="lower-nav-sub">
+                        <img src="icons/computer-security-shield.png" alt="">
                         <a href="">Privacy</a>
                     </div>
                 </div>
@@ -80,7 +94,7 @@
         </div>
 
         <div class="content">
-            <h4>My Projects</h4>
+            <h4>Your Projects</h4>
             <div class="projects">
                 <div class="projects-sub">
                     <b>Super Cool Project</b>
@@ -92,6 +106,17 @@
                         Distinctio atque sit animi quaerat porro totam quod, ab, culpa error consectetur perferendis
                         eius quia assumenda iure corrupti unde odio veritatis ex.
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="projects-sub">
                     <b>Less Cool Project</b>
@@ -103,6 +128,17 @@
                         quae fugiat recusandae tenetur nisi tempora, quos blanditiis eos illum reprehenderit architecto,
                         porro commodi eius beatae minima, quidem tempore optio suscipit.
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="projects-sub">
                     <b>Impossible App</b>
@@ -114,6 +150,17 @@
                         repellendus voluptatum dolorum veniam laborum, natus, in consectetur necessitatibus a aliquid
                         dicta non voluptatibus aspernatur distinctio temporibus, eligendi odio inventore!
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="projects-sub">
                     <b>Easy Peasy App</b>
@@ -125,6 +172,17 @@
                         adipisicing elit. Nam reiciendis voluptate aliquam ipsum doloribus temporibus iusto, quaerat,
                         asperiores cupiditate eveniet adipisci unde hic rem porro iure velit, soluta tempora quo?
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="projects-sub">
                     <b>Ad Blocker</b>
@@ -136,6 +194,17 @@
                         Dignissimos beatae nobis sint, odit nihil consequuntur ut, laborum rem tempora voluptate nam
                         provident impedit quia. Dolores perspiciatis consequuntur pariatur quia a.
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="projects-sub">
                     <b>Money Maker</b>
@@ -147,11 +216,22 @@
                         mollitia non voluptatum expedita iste provident obcaecati, quas quam eum illo eos maiores
                         similique in neque harum! Adipisci, at distinctio. Et?
                     </p>
+                    <div class="projects-links">
+                        <a href="">
+                            <img src="icons/thumbsup-ui-like-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/share-network-multimedia-svgrepo-com.svg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="icons/folder-ui-user-interface-svgrepo-com.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        
+
         <div class="news">
             <h3>Announcements</h3>
             <div id="news-sub">
